tests/patching/errors/load_empty_path.dby
import std.buffer as buf
buf.load("")
